exports[`<Text/> Component > snapshots for Text component #0`] = `
<div
  id="text-font-size"
  class="Layout---vertical--3Szv StyledProps---main--1Wws"
>
  <p class="StyledProps---font--2ipy StyledProps---main--1Wws">
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-small--1qQz"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-normal--3w1_"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-large--2sHu"
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`<Text/> Component > snapshots for Text component #1`] = `
<div id="text-weight" class="Layout---vertical--3Szv StyledProps---main--1Wws">
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-bold--22XZ"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-semi-bold--QRXr"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-weight-light--2bfm"
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`<Text/> Component > snapshots for Text component #2`] = `
<div id="text-mono" class="Layout---vertical--3Szv StyledProps---main--1Wws">
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-mono--1AGe"
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`<Text/> Component > snapshots for Text component #3`] = `
<div id="text-intent" class="Layout---vertical--3Szv StyledProps---main--1Wws">
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---intent-primary--2Xgi"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---intent-success--hn02"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---intent-warning--2N1t"
  >
    The quick brown fox jumps over the lazy dog
  </p>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---intent-danger--1PFK"
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;

exports[`<Text/> Component > snapshots for Text component #4`] = `
<div
  id="text-styled-props"
  class="Layout---vertical--3Szv StyledProps---main--1Wws"
>
  <p
    class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---padding-small--3f0A StyledProps---font-size-large--3wvf StyledProps---font-align-center--22lb StyledProps---border--uz_- StyledProps---border-color-green500--1Ccx StyledProps---background-grey100--2FyT"
  >
    The quick brown fox jumps over the lazy dog
  </p>
</div>
`;
